--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
     <link href="css/styles.css" rel="stylesheet"
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>My Favorite Band</title>
-</head>
+</head><body>
+    <img src="Prettymuch1.jpeg"alt="https://img.17qq.com/images/sshcecrtcx.jpeg"style="width:600px;height:400px;">
+</body>
+<body>
+    <h1 style="color:rgb(71, 99, 255);">PRETTYMUCH</h1>
+    <h2 style="color:rgb(114, 204, 182);">Artist Biography by Nicholas Owino</h2> 
+<h4>PRETTYMUCH. Pretty much means(not comparable) Almost completely;very nearly; mostly; more or less; basically. </h4>
+
+</body>
+
 
