--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>My Favorite Band PRETTYMUCH</h1>
+        <div class="box-1">
+            <h1>My Favorite Band PRETTYMUCH</h1>
         <img src="Prettymuch1.jpeg" alt="https://img.17qq.com/images/sshcecrtcx.jpeg" style="width:600px;height:400px;">
         <p> The members of PRETTYMUCH were pursuing solo careers until Simon Cowell and Sonny Takhar decided to bring them together and form a group. All the members of PRETTYMUCH, since 2016, have been 
             based in Los Angeles where they all live together while recording their debut album. The album, to be released on Columbia Records and executive producer Savan Kotecha, features a guest appearance 
@@ -14,6 +15,8 @@
             In July 2017, their debut single, "Would You Mind", written by Savan Kotecha and Jacob Kasher, was released and a month later, the group performed the song at the 2017 Teen Choice Awards.
             Their music video for the song was released in September. The video was inspired by boy band videos of the late 90s and early 2000s like N'Sync and Backstreet Boys. The boys also have matching tattoos
             .III.XVIII.XVI. It means 3-18-16 which was the date the band was formed.</p>
+        </div>
+        
 
     </body>
 
