--- a/index.html
+++ b/index.html
@@ -36,7 +36,37 @@
             <li><a href="#">Austin Porter</a></li>
         </ul>
 </div>
-
+<div class="block">
+    <h3> Artist bio Austin Porter</h3>
+    <p>
+ Entertainer, choreographer, and recording artist who released his debut album One Love in December of 2013.
+ In 2016 he joined Simon Cowell's band PRETTYMUCH.Before Fame He started hip hop dancing and playing the 
+ drums at 10 years old, and used to perform alongside his mother in church.
+  At the age of 14, he started pursuing songwriting and recording. 
+    </p>
+    <h3> Artist bio Nick Mara</h3>
+    <p>
+        Former ICONic Boyz member who joined the five-piece boy band PRETTYMUCH in 2016. 
+        He has been a featured dancer on Saturday Night Live and MTV's MADE, 
+        along with appearing on Disney's Shake It Up.Before PRETTYMUCH, he competed on the sixth season
+         of MTV's America's Best Dance Crew with the ICONic Boyz in 2011. 
+    </p>
+    <h3> Artist bio Edwin Honoret</h3>
+    <p>
+        YouTube content creator who became a member of the Simon Cowell five-piece boy band PRETTYMUCH
+         in 2016.Before Fame he first registered for his YouTube channel in December of 2009 with the
+          username ghtuts. He began posting his covers in mid-2013.
+    </p>
+    <h3> Artist biography</h3>
+    <p>
+        jsjhdfdjkjdjhfgjkfkhjkfghjfkhfjkhdjhfkjdfknvkfjnjkbfjnjknb
+    </p>
+    <h3> Artist biography</h3>
+    <p>
+        jsjhdfdjkjdjhfgjkfkhjkfghjfkhfjkhdjhfkjdfknvkfjnjkbfjnjknb
+    </p>
+    
+</div>
 <div style="margin-top: 500px;"></div>
     </body>
 
