--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
          in 2016.Before Fame he first registered for his YouTube channel in December of 2009 with the
           username ghtuts. He began posting his covers in mid-2013.
     </p>
-    <h3> Artist biography</h3>
+    <h3> Artist bio Brandon Arreaga</h3>
     <p>
-        jsjhdfdjkjdjhfgjkfkhjkfghjfkhfjkhdjhfkjdfknvkfjnjkbfjnjknb
+        Professional singer and dancer who became a member of Simon Cowell's boyband PRETTYMUCH. 
+        He has also performed as part of a group called TruCrew. Before Fame fe caught his first
+         break when he was cast in the Hub reality series Majors and Minors. 
     </p>
     <h3> Artist biography</h3>
     <p>
