--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
         He has also performed as part of a group called TruCrew. Before Fame fe caught his first
          break when he was cast in the Hub reality series Majors and Minors. 
     </p>
-    <h3> Artist biography</h3>
+    <h3> Artist bio Zion Kuwonu</h3>
     <p>
-        jsjhdfdjkjdjhfgjkfkhjkfghjfkhfjkhdjhfkjdfknvkfjnjkbfjnjknb
+        Multi-talented artist who would become one-fifth of the boy band PRETTYMUCH.
+        The band was originally formed by Simon Cowell. Before Fame he first started 
+        showcasing his singing and dancing talents on Instagram as early as December 
+        of 2014
     </p>
     
 </div>
