--- a/index.html
+++ b/index.html
@@ -70,7 +70,28 @@
         showcasing his singing and dancing talents on Instagram as early as December 
         of 2014
     </p>
+    <h3> Famous Songs of PRETTYMUCH</h3>
+    <p>
+        It might be "Hot Girl Summer," but there is another anthem that's been taking over the 
+        summer playlist: "Summer on You" by PRETTYMUCH. Band members have been churning out the 
+        hits lately, and we can't seem to get enough of the Simon Cowell-discovered boy band other 
+        hits are:<ol>
+            <li>Gone too long</li>
+            <li>FT CNCO - Me Necesita</li>
+            <li>Teacher</li>
+            <li>Open Arms</li>
+            <li>10,000 Hours</li>
+            <li>Phases</li>
+          </ol>
+
+    </p>
+</div>
+<div class class="clr"></div>
+<div id="main-block">
     
+</div>
+<div id="sidebar">
+
 </div>
 <div style="margin-top: 500px;"></div>
     </body>
