--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <div class="block">
     <h3> Artist bio Austin Porter</h3>
     <p>
+        <img src="theaustinporter.jpg" alt="theaustinporter.jpg" style="float:right;width:300px;height:300px;">
  Entertainer, choreographer, and recording artist who released his debut album One Love in December of 2013.
  In 2016 he joined Simon Cowell's band PRETTYMUCH.Before Fame He started hip hop dancing and playing the 
  drums at 10 years old, and used to perform alongside his mother in church.
@@ -74,8 +75,8 @@
     <p>
         It might be "Hot Girl Summer," but there is another anthem that's been taking over the 
         summer playlist: "Summer on You" by PRETTYMUCH. Band members have been churning out the 
-        hits lately, and we can't seem to get enough of the Simon Cowell-discovered boy band other 
-        hits are:<ol>
+        hits lately, and we can't seem to get enough of the Simon Cowell-discovered boy band.
+        Other hits are:<ol>
             <li>Gone too long</li>
             <li>FT CNCO - Me Necesita</li>
             <li>Teacher</li>
