--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
 <div class="block">
     <h3> Artist bio Austin Porter</h3>
     <p>
-        <img src="theaustinporter.jpg" alt="theaustinporter.jpg" style="float:right;width:300px;height:300px;">
+        <img src="theaustinporter.jpg" alt="theaustinporter.jpg" style="float:right;width:300px;height:200px;">
  Entertainer, choreographer, and recording artist who released his debut album One Love in December of 2013.
  In 2016 he joined Simon Cowell's band PRETTYMUCH.Before Fame He started hip hop dancing and playing the 
  drums at 10 years old, and used to perform alongside his mother in church.
   At the age of 14, he started pursuing songwriting and recording. 
     </p>
     <h3> Artist bio Nick Mara</h3>
+    <img src="therealnickmara.jpg" alt="therealnickmara.jpg" style="float:right;width:300px;height:250px;">
     <p>
         Former ICONic Boyz member who joined the five-piece boy band PRETTYMUCH in 2016. 
         He has been a featured dancer on Saturday Night Live and MTV's MADE, 
