--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
 </div>
 <div class="block">
     <h3> Artist bio Austin Porter</h3>
+    <img src="theaustinporter.jpg" alt="theaustinporter.jpg" style="float:top;width:200px;height:200px;">
     <p>
-        <img src="theaustinporter.jpg" alt="theaustinporter.jpg" style="float:right;width:300px;height:200px;">
- Entertainer, choreographer, and recording artist who released his debut album One Love in December of 2013.
- In 2016 he joined Simon Cowell's band PRETTYMUCH.Before Fame He started hip hop dancing and playing the 
- drums at 10 years old, and used to perform alongside his mother in church.
-  At the age of 14, he started pursuing songwriting and recording. 
+    Entertainer, choreographer, and recording artist who released his debut album One Love 
+    in December of 2013.In 2016 he joined Simon Cowell's band PRETTYMUCH.Before Fame He 
+    started hip hop dancing and playing the drums at 10 years old, and used to perform 
+    alongside his mother in church.At the age of 14, he started pursuing songwriting and recording. 
     </p>
     <h3> Artist bio Nick Mara</h3>
-    <img src="therealnickmara.jpg" alt="therealnickmara.jpg" style="float:right;width:300px;height:250px;">
+    <img src="therealnickmara.jpg" alt="therealnickmara.jpg" style="float:top;width:200px;height:200px;">
     <p>
         Former ICONic Boyz member who joined the five-piece boy band PRETTYMUCH in 2016. 
         He has been a featured dancer on Saturday Night Live and MTV's MADE, 
@@ -54,18 +54,21 @@
          of MTV's America's Best Dance Crew with the ICONic Boyz in 2011. 
     </p>
     <h3> Artist bio Edwin Honoret</h3>
+    <img src="edwinhonoret.jpg" alt="edwinhonoret.jpg" style="float:top;width:200px;height:200px;">
     <p>
         YouTube content creator who became a member of the Simon Cowell five-piece boy band PRETTYMUCH
          in 2016.Before Fame he first registered for his YouTube channel in December of 2009 with the
           username ghtuts. He began posting his covers in mid-2013.
     </p>
     <h3> Artist bio Brandon Arreaga</h3>
+    <img src="Brandon Arreaga.jpg" alt="Brandon Arreaga.jpg.jpg" style="float:top;width:200px;height:200px;">
     <p>
         Professional singer and dancer who became a member of Simon Cowell's boyband PRETTYMUCH. 
         He has also performed as part of a group called TruCrew. Before Fame fe caught his first
          break when he was cast in the Hub reality series Majors and Minors. 
     </p>
     <h3> Artist bio Zion Kuwonu</h3>
+    <img src="Zion Kuwonu.jpg" alt="Zion Kuwonu.jpg" style="float:top;width:200px;height:200px;">
     <p>
         Multi-talented artist who would become one-fifth of the boy band PRETTYMUCH.
         The band was originally formed by Simon Cowell. Before Fame he first started 
