added more elements

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
         <title>My Favorite Band</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <h3> ,,, <span style="color:rgb(217, 217, 240)">By Nicholas</span>...</h3>
     <body>
         <div class="container">
             <div class="box-1">
                 <h1>My Fav Band PRETTYMUCH </h1>
             <img src="Prettymuch1.jpeg" alt="https://img.17qq.com/images/sshcecrtcx.jpeg" style="width:600px;height:400px;">
-            <p> The members of PRETTYMUCH were pursuing solo careers until Simon Cowell and Sonny Takhar decided to bring them together and form a group. All the members of PRETTYMUCH, since 2016, have been 
+            <p> The members of PRETTYMUCH were pursuing solo careers until <em>Simon Cowell</em> and Sonny Takhar decided to bring them together and form a group. All the members of PRETTYMUCH, since 2016, have been 
                 based in Los Angeles where they all live together while recording their debut album. The album, to be released on Columbia Records and executive producer Savan Kotecha, features a guest appearance 
                 by French Montana on one track and a song written by Ed Sheeran.</p>
             </div>
     </div>
 <div class="box-2">
     <h1>More on the band </h1>
-            <p>PRETTYMUCH gained a following on social media with their cover songs and dancing videos, 
+            <p><strong>PRETTYMUCH</strong> gained a following on social media with their cover songs and dancing videos, 
                 including a rendition of Julia Michael's "Issues" and choreography tributes to Bruno Mars and Michael Jackson.
                 In July 2017, their debut single, "Would You Mind", written by Savan Kotecha and Jacob Kasher, was released and a month later, the group performed the song at the 2017 Teen Choice Awards.
                 Their music video for the song was released in September. The video was inspired by boy band videos of the late 90s and early 2000s like N'Sync and Backstreet Boys. The boys also have matching tattoos
@@ -79,7 +80,8 @@
     <p>
         It might be "Hot Girl Summer," but there is another anthem that's been taking over the 
         summer playlist: "Summer on You" by PRETTYMUCH. Band members have been churning out the 
-        hits lately, and we can't seem to get enough of the Simon Cowell-discovered boy band.
+        hits lately, and we can't seem to get enough of the Simon Cowell-discovered boy band.My
+        favorite and best song of PRETTYMUCH is Gone too long <a href="https://www.youtube.com/watch?v=RT86md71-ZQ&ab_channel=PrettyMuchVEVO" target="_blank">Listen here</a> 
         Other hits are:<ol>
             <li>Gone too long</li>
             <li>FT CNCO - Me Necesita</li>
@@ -99,7 +101,8 @@
 
 </div>
 <div style="margin-top: 500px;"></div>
-    </body>
+
+</body>
 
 </html>
 
