added colours to musicians heading

--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
             <img src="Prettymuch1.jpeg" alt="https://img.17qq.com/images/sshcecrtcx.jpeg" style="width:600px;height:400px;">
             <p> The members of PRETTYMUCH were pursuing solo careers until <em>Simon Cowell</em> and Sonny Takhar decided to bring them together and form a group. All the members of PRETTYMUCH, since 2016, have been 
                 based in Los Angeles where they all live together while recording their debut album. The album, to be released on Columbia Records and executive producer Savan Kotecha, features a guest appearance 
-                by French Montana on one track and a song written by Ed Sheeran.</p>
+                by French Montana on one track and a song written by Ed Sheeran.
+                If you wish to listen to their songs click to<a href="https://www.prettymuch.com/" target="_blank">Listen here</a> 
+                PRETTYMUCH produced albums are:
+                <ul>
+                    <li>PrettyMuch an EP</li>
+                    <li>Phases - EP</li>
+                    <li>INTL:EP</li>
+                    <li>Smackables</li>
+                    <li>Smackables (Deluxe Edition)</li>
+                  </ul>
+            </p>
             </div>
     </div>
 <div class="box-2">
-    <h1>More on the band </h1>
+    <h1 style="color:rgb(221, 226, 233);">More on the band</h1> 
             <p><strong>PRETTYMUCH</strong> gained a following on social media with their cover songs and dancing videos, 
                 including a rendition of Julia Michael's "Issues" and choreography tributes to Bruno Mars and Michael Jackson.
                 In July 2017, their debut single, "Would You Mind", written by Savan Kotecha and Jacob Kasher, was released and a month later, the group performed the song at the 2017 Teen Choice Awards.
@@ -28,7 +38,7 @@
                 .</p>
 </div>
 <div class="categories">
-    <h2>PRETTYMUCH Members</h2>
+    <h2 style="color:rgb(123, 89, 216);">PRETTYMUCH Members</h2> 
         <ul>
             <li><a href="#">Edwin Honoret-</a></li>
             <li><a href="#">Brandon Arreaga</a></li>
@@ -38,7 +48,7 @@
         </ul>
 </div>
 <div class="block">
-    <h3> Artist bio Austin Porter</h3>
+    <h3 style="color:rgb(219, 221, 82);">Artist bio Austin Porter</h3> 
     <img src="theaustinporter.jpg" alt="theaustinporter.jpg" style="float:top;width:200px;height:200px;">
     <p>
     Entertainer, choreographer, and recording artist who released his debut album One Love 
