--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <title>My Favorite Band</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <h3> ,,, <span style="color:rgb(217, 217, 240)">By Nicholas</span>...</h3>
     <body>
+        <header id=",main-header"
         <div class="container">
             <div class="box-1">
-                <h1>My Fav Band PRETTYMUCH </h1>
+                <h1 style="color:rgb(119, 153, 228);">My Favorite Band PRETTYMUCH</h1> 
             <img src="Prettymuch1.jpeg" alt="https://img.17qq.com/images/sshcecrtcx.jpeg" style="width:600px;height:400px;">
             <p> The members of PRETTYMUCH were pursuing solo careers until <em>Simon Cowell</em> and Sonny Takhar decided to bring them together and form a group. All the members of PRETTYMUCH, since 2016, have been 
                 based in Los Angeles where they all live together while recording their debut album. The album, to be released on Columbia Records and executive producer Savan Kotecha, features a guest appearance 
@@ -48,7 +48,7 @@
         </ul>
 </div>
 <div class="block">
-    <h3 style="color:rgb(219, 221, 82);">Artist bio Austin Porter</h3> 
+    <h3 style="color:rgb(214, 216, 89);">Artist bio Austin Porter</h3> 
     <img src="theaustinporter.jpg" alt="theaustinporter.jpg" style="float:top;width:200px;height:200px;">
     <p>
     Entertainer, choreographer, and recording artist who released his debut album One Love 
@@ -56,7 +56,7 @@
     started hip hop dancing and playing the drums at 10 years old, and used to perform 
     alongside his mother in church.At the age of 14, he started pursuing songwriting and recording. 
     </p>
-    <h3> Artist bio Nick Mara</h3>
+    <h3 style="color:rgb(231, 170, 79);">Artist bio Nick Mara</h3> 
     <img src="therealnickmara.jpg" alt="therealnickmara.jpg" style="float:top;width:200px;height:200px;">
     <p>
         Former ICONic Boyz member who joined the five-piece boy band PRETTYMUCH in 2016. 
@@ -64,21 +64,21 @@
         along with appearing on Disney's Shake It Up.Before PRETTYMUCH, he competed on the sixth season
          of MTV's America's Best Dance Crew with the ICONic Boyz in 2011. 
     </p>
-    <h3> Artist bio Edwin Honoret</h3>
+    <h3 style="color:rgb(79, 213, 231);">Artist bio Edwin Honoret</h3> 
     <img src="edwinhonoret.jpg" alt="edwinhonoret.jpg" style="float:top;width:200px;height:200px;">
     <p>
         YouTube content creator who became a member of the Simon Cowell five-piece boy band PRETTYMUCH
          in 2016.Before Fame he first registered for his YouTube channel in December of 2009 with the
           username ghtuts. He began posting his covers in mid-2013.
     </p>
-    <h3> Artist bio Brandon Arreaga</h3>
+    <h3 style="color:rgb(58, 22, 63);">Artist bio Brandon Arreaga</h3> 
     <img src="Brandon Arreaga.jpg" alt="Brandon Arreaga.jpg.jpg" style="float:top;width:200px;height:200px;">
     <p>
         Professional singer and dancer who became a member of Simon Cowell's boyband PRETTYMUCH. 
         He has also performed as part of a group called TruCrew. Before Fame fe caught his first
          break when he was cast in the Hub reality series Majors and Minors. 
     </p>
-    <h3> Artist bio Zion Kuwonu</h3>
+    <h3 style="color:rgb(85, 35, 66);">Artist bio Zion Kuwonu</h3> 
     <img src="Zion Kuwonu.jpg" alt="Zion Kuwonu.jpg" style="float:top;width:200px;height:200px;">
     <p>
         Multi-talented artist who would become one-fifth of the boy band PRETTYMUCH.
@@ -86,12 +86,13 @@
         showcasing his singing and dancing talents on Instagram as early as December 
         of 2014
     </p>
-    <h3> Famous Songs of PRETTYMUCH</h3>
+    <h3 style="color:rgb(121, 88, 212);">Famous Songs of PRETTYMUCH</h3> 
     <p>
         It might be "Hot Girl Summer," but there is another anthem that's been taking over the 
         summer playlist: "Summer on You" by PRETTYMUCH. Band members have been churning out the 
         hits lately, and we can't seem to get enough of the Simon Cowell-discovered boy band.My
         favorite and best song of PRETTYMUCH is Gone too long <a href="https://www.youtube.com/watch?v=RT86md71-ZQ&ab_channel=PrettyMuchVEVO" target="_blank">Listen here</a> 
+        which is from the album <strong>Phases - EP</strong>
         Other hits are:<ol>
             <li>Gone too long</li>
             <li>FT CNCO - Me Necesita</li>
@@ -100,7 +101,25 @@
             <li>10,000 Hours</li>
             <li>Phases</li>
           </ol>
-
+          <h2>Tours</h2>
+          <h3>Headlining</h3>
+          <ol>
+            <li>PRETTYMUCH EVERYWHERE Tour (2018)</li>
+            <li>FUNKTION Tour (2018)</li>
+            <li>FOMO Tour (2019)</li>
+          </ol>
+          <h4>Opening Act</h4>
+          <ol>
+              <li> Jack & Jack Tour (2017)</li>
+              <li>Roxy Tour (2018)</li>
+          </ol>
+          <h3><span style="color:rgb(217, 217, 240)">for more  </span>click 
+            <a href="https://en.wikipedia.org/wiki/PrettyMuch">on</a> to know more about the band.
+        </h3>
+          <footer id="main-footer">
+            <h4>Copyright &copy; 2021, NicholasOkoth38 Website</4>
+            </p>
+        </footer>
     </p>
 </div>
 <div class class="clr"></div>
